2005-01-29  Steven G. Kargl  <kargls@comcast.net>

PR fortran/19589
	* expr.c (gfc_check_assign):  Check for conformance of logical operands
testsuite/
	* gfortran.dg/logical_data_1.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94409 138bc75d-0d04-0410-961f-82ee72b054a4